--- a/app/layout/feature.html
+++ b/app/layout/feature.html
@@ -105,7 +105,7 @@
                 switch it to high
               </a>
 
-              switch it to high and the area loses 14 percent.
+              and the area loses 14 percent.
 
             </p>
 
@@ -241,11 +241,11 @@
             <div class="inline-maps">
               <div class="inline-maps-header">
                 <h1>Percent Change by Race, 2010-2030</h1>
-                <h2>Average Birth, Average Death, Average Migration</h2>
+                <h2>Average birth, average death, and average migration assumptions.</h2>
               </div>
               <div class="map-box">
                 <div class="map-plexiglass"></div>
-                <label class='centered'>All Races</label>
+                <label class='centered'>All races</label>
                 <div id="races-inline-all" class="inline-map"></div>
               </div>
               <div class="map-box">
