--- a/app/layout/map.html
+++ b/app/layout/map.html
@@ -259,7 +259,7 @@
               <div class="credit-name">Steven Martin, </div>
               <div class="credit-name">H. Elizabeth Peters, </div>
               <div class="credit-name">Austin Nichols, </div>
-              <div class="credit-name">Kait Hildner, </div>
+              <div class="credit-name">Kaitlin Franks Hildner, </div>
               <div class="credit-name">Allison Stolte, </div>
               <div class="credit-name">Pam Blumenthal</div>
             </div>
