--- a/app/views/index_build.html
+++ b/app/views/index_build.html
@@ -3,124 +3,126 @@
 <!--[if (gt IE 9)|!(IE)]><!--> <html class=""> <!--<![endif]-->
 <head>
 
-    <!--
-      Population Projections 2.0
-      Ben Southgate (bsouthga@gmail.com)
-      12/01/14
-    -->
+  <!--
+    Population Projections 2.0
+    Ben Southgate (bsouthga@gmail.com)
+    12/01/14
+  -->
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mapping America’s Futures</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Mapping America’s Futures</title>
 
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 
-    <!-- build:css:dist css/app.min.css -->
+  <!-- build:css:dist css/app.min.css -->
 
-    <!-- vendor styles -->
-    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="lib/select2/select2.css" rel="stylesheet">
-    <link href="lib/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet">
+  <!-- vendor styles -->
+  <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="lib/select2/select2.css" rel="stylesheet">
+  <link href="lib/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <!-- urban styles -->
-    <link href="css/map.css" rel="stylesheet">
-    <link href="css/charts.css" rel="stylesheet">
-    <link href="css/carousel.css" rel="stylesheet">
-    <link href="css/controls.css" rel="stylesheet">
-    <link href="css/detail.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
-    <link href="css/select2-bootstrap.css" rel="stylesheet">
-    <!-- /build -->
+  <!-- urban styles -->
+  <link href="css/map.css" rel="stylesheet">
+  <link href="css/charts.css" rel="stylesheet">
+  <link href="css/carousel.css" rel="stylesheet">
+  <link href="css/controls.css" rel="stylesheet">
+  <link href="css/detail.css" rel="stylesheet">
+  <link href="css/nav.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
+  <link href="css/select2-bootstrap.css" rel="stylesheet">
+
+  <!-- /build -->
 
 </head>
 
 <body> 
 <div id="mobile-test"></div>
 <div class="cropper" id="crossfade">
-    <img class="title-image async" data-src="images/Header001.png" />
+  <img class="title-image async" data-src="images/Header001.png" />
 </div>
 
 <!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-header">
-        <a target="_blank" href="http://www.urban.org">
-            <img class="logo-image hidden-lg async" data-src="images/new_mark_U-01.png" />
+  <div class="navbar-header">
+    <a target="_blank" href="http://www.urban.org">
+      <img class="logo-image hidden-lg async" data-src="images/new_mark_U-01.png" />
+    </a>
+    <a target="_blank" href="http://www.urban.org">
+      <img class="logo-image hidden-xs hidden-sm hidden-md async" data-src="images/logo_revblue_trans.png" />
+    </a>
+    <span id="title-span" class="hidden-xs">MAPPING AMERICA'S FUTURES</span>
+    <span id="hamburger-bun" class="height-adjust">
+      <span id="share-container">
+        <span id="hidden-share">
+        <a target="_blank" href="http://twitter.com/intent/tweet?text=Interactive%3A%20Test%20possible%20scenarios%20for%20how%20the%20US%20population%20might%20change%20in%202020%20%26%202030%20http%3A%2F%2Furbn.is%2FAmericasFutures%20%23AmericasFutures">
+          <span id="twitter" class="nav-icon">
+            <i class="fa fa-twitter"></i>
+          </span>
         </a>
-        <a target="_blank" href="http://www.urban.org">
-            <img class="logo-image hidden-xs hidden-sm hidden-md async" data-src="images/logo_revblue_trans.png" />
+        <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http://urbn.is/AmericasFutures">
+          <span id="facebook" class="nav-icon"><i class="fa fa-facebook"></i></span>
         </a>
-        <span id="title-span" class="hidden-xs">MAPPING AMERICA'S FUTURES</span>
-        <span id="hamburger-bun" class="height-adjust">
-            <span id="share-container">
-                <span id="hidden-share">
-                <a target="_blank" href="http://twitter.com/intent/tweet?text=Interactive%3A%20Test%20possible%20scenarios%20for%20how%20the%20US%20population%20might%20change%20in%202020%20%26%202030%20http%3A%2F%2Furbn.is%2FAmericasFutures%20%23AmericasFutures">
-                    <span id="twitter" class="nav-icon">
-                        <i class="fa fa-twitter"></i>
-                    </span>
-                </a>
-                <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http://urbn.is/AmericasFutures">
-                    <span id="facebook" class="nav-icon"><i class="fa fa-facebook"></i></span>
-                </a>
-                <a target="_blank" href="mailto:%20?Subject=New interactive from the Urban Institute&amp;Body=Hi! I thought you might be interested in this new interactive from the Urban Institute: &quot;Mapping America\'s Futures&quot; http://urbn.is/AmericasFutures">
-                    <span id="mail" class="nav-icon"><i class="fa fa-envelope-o"></i></span>
-                </a>
-              </span>
-                <span id="social" class="nav-icon">
-                    <i class="fa fa-share"></i>
-                </span>
-            </span>
-            <span class="navbar-toggle nav-icon" data-toggle="collapse" data-target=".navbar-collapse">
-                <i class="fa fa-bars"></i>
-            </span>
+        <a target="_blank" href="mailto:%20?Subject=New interactive from the Urban Institute&amp;Body=Hi! I thought you might be interested in this new interactive from the Urban Institute: &quot;Mapping America\'s Futures&quot; http://urbn.is/AmericasFutures">
+          <span id="mail" class="nav-icon"><i class="fa fa-envelope-o"></i></span>
+        </a>
         </span>
+        <span id="social" class="nav-icon">
+          <i class="fa fa-share"></i>
+        </span>
+      </span>
+      <span class="navbar-toggle nav-icon" data-toggle="collapse" data-target=".navbar-collapse">
+        <i class="fa fa-bars"></i>
+      </span>
+    </span>
+  </div>
+  <div class="navbar-collapse collapse" id="briefs">
+    <div class="container" id="hamburger-meat">
+
+      <div class="col-sm-3">
+        <h1 class="dropdown-section-header">BLOG POSTS</h1>
+        <hr/>
+        <a target="_blank" href="http://blog.metrotrends.org/2014/06/future-americas-young-population/">
+          The future of America’s young population
+        </a>
+      </div>
+      <div class="col-sm-6">
+        <h1 class="dropdown-section-header">RESEARCH</h1>
+        <hr/>
+        <a target="_blank" href="http://www.urban.org/publications/2000065.html">
+          Scenarios for Regional Growth from 2010 to 2030
+        </a>
+
+        <a target="_blank" href="http://www.urban.org/publications/2000066.html">
+          Evolving Patterns in Diversity
+        </a>
+
+        <a target="_blank" href="http://www.urban.org/publications/2000067.html">
+          Children and Youth in an Aging America
+        </a>
+
+        <a target="_blank" href="http://www.urban.org/publications/2000068.html">
+          The Labor Force in an Aging and Growing America
+        </a>
+
+        <a target="_blank" href="http://www.urban.org/publications/2000069.html">
+          Methodology and Assumptions for Mapping America's Futures Project
+        </a>
+
+        <a target="_blank" href="http://www.urban.org/publications/2000070.html">
+          2000-2010 Population Profiles: Atlanta, Las Vegas, Washington, DC, and  Youngstown
+        </a>
+
+      </div>
+      <div class="col-sm-3">
+        <h1 class="dropdown-section-header">INTERACTIVE FEATURES</h1>
+        <hr/>
+        <a id="map" class="carousel-link">Tool: Population Projections</a>
+        <!-- <a id="feature" class="carousel-link">Feature: A Tour of America’s Futures</a> -->
+        <a target="_blank" href="mailto:americasfutures@urban.org">Questions or Comments?<br/>Let us know.</a>
+      </div>
     </div>
-    <div class="navbar-collapse collapse" id="briefs">
-        <div class="container" id="hamburger-meat">
-
-            <div class="col-sm-3">
-                <h1 class="dropdown-section-header">BLOG POSTS</h1>
-                <hr/>
-                <a target="_blank" href="http://blog.metrotrends.org/2014/06/future-americas-young-population/">
-                  The future of America’s young population
-                </a>
-            </div>
-            <div class="col-sm-6">
-                <h1 class="dropdown-section-header">RESEARCH</h1>
-                <hr/>
-                <a target="_blank" href="http://www.urban.org/publications/2000065.html">
-                  Scenarios for Regional Growth from 2010 to 2030
-                </a>
-
-                <a target="_blank" href="http://www.urban.org/publications/2000067.html">
-                  Children and Youth in an Aging America
-                </a>
-
-                <a target="_blank" href="http://www.urban.org/publications/2000066.html">
-                  Evolving Patterns in Diversity
-                </a>
-
-                <a target="_blank" href="http://www.urban.org/publications/2000068.html">
-                  The Labor Force in an Aging and Growing America
-                </a>
-
-                <a target="_blank" href="http://www.urban.org/publications/2000069.html">
-                  Methodology and Assumptions for Mapping America's Futures Project
-                </a>
-
-                <a target="_blank" href="http://www.urban.org/publications/2000070.html">
-                  2000-2010 Population Profiles: Atlanta, Las Vegas, Washington, DC, and  Youngstown
-                </a>
-
-            </div>
-            <div class="col-sm-3">
-                <h1 class="dropdown-section-header">INTERACTIVE FEATURES</h1>
-                <hr/>
-                <a id="map" class="carousel-link">Tool: Population Projections</a>
-                <!-- <a id="feature" class="carousel-link">Feature: A Tour of America’s Futures</a> -->
-                <a target="_blank" href="mailto:americasfutures@urban.org">Questions or Comments?<br/>Let us know.</a>
-            </div>
-        </div>
-    </div>
+  </div>
 </nav> <div class="container fill">
     <div id="carousel" class="carousel slide">
         <div class="carousel-inner"> <div class="item active" id="feature">
@@ -230,7 +232,7 @@
                 switch it to high
               </a>
 
-              switch it to high and the area loses 14 percent.
+              and the area loses 14 percent.
 
             </p>
 
@@ -366,11 +368,11 @@
             <div class="inline-maps">
               <div class="inline-maps-header">
                 <h1>Percent Change by Race, 2010-2030</h1>
-                <h2>Average Birth, Average Death, Average Migration</h2>
+                <h2>Average birth, average death, and average migration assumptions.</h2>
               </div>
               <div class="map-box">
                 <div class="map-plexiglass"></div>
-                <label class='centered'>All Races</label>
+                <label class='centered'>All races</label>
                 <div id="races-inline-all" class="inline-map"></div>
               </div>
               <div class="map-box">
@@ -715,7 +717,7 @@
               <div class="credit-name">Steven Martin, </div>
               <div class="credit-name">H. Elizabeth Peters, </div>
               <div class="credit-name">Austin Nichols, </div>
-              <div class="credit-name">Kait Hildner, </div>
+              <div class="credit-name">Kaitlin Franks Hildner, </div>
               <div class="credit-name">Allison Stolte, </div>
               <div class="credit-name">Pam Blumenthal</div>
             </div>
