--- a/app/layout/feature.html
+++ b/app/layout/feature.html
@@ -241,7 +241,7 @@
             <div class="inline-maps">
               <div class="inline-maps-header">
                 <h1>Percent Change by Race, 2010-2030</h1>
-                <h2>Average birth, average death, and average migration assumptions.</h2>
+                <h2>Assumes average birth, average death, and average migration.</h2>
               </div>
               <div class="map-box">
                 <div class="map-plexiglass"></div>
