--- a/app/layout/footer.html
+++ b/app/layout/footer.html
@@ -27,6 +27,9 @@
 
     <!-- /build -->
 
+
+    <!-- TRACKDUCK -->
+
     <script 
         src="//tdcdn.blob.core.windows.net/toolbar/assets/prod/td.js" 
         async 
