--- a/app/layout/map.html
+++ b/app/layout/map.html
@@ -255,12 +255,12 @@
               <h6 class="credit-title">PROJECT DIRECTOR</h6>
               Rolf Pendall
               <h6 class="credit-title">RESEARCH</h6>
-              <div class="credit-name">Nan Marie Astone, </div>
-              <div class="credit-name">Steven Martin, </div>
-              <div class="credit-name">H. Elizabeth Peters, </div>
-              <div class="credit-name">Austin Nichols, </div>
-              <div class="credit-name">Kaitlin Franks Hildner, </div>
-              <div class="credit-name">Allison Stolte, </div>
+              <div class="credit-name">Nan Marie Astone,&nbsp;</div>
+              <div class="credit-name">Steven Martin,&nbsp;</div>
+              <div class="credit-name">H. Elizabeth Peters,&nbsp;</div>
+              <div class="credit-name">Austin Nichols,&nbsp;</div>
+              <div class="credit-name">Kaitlin Franks Hildner,&nbsp;</div>
+              <div class="credit-name">Allison Stolte,&nbsp;</div>
               <div class="credit-name">Pam Blumenthal</div>
             </div>
             <div class="col-sm-6">
