--- a/app/views/index_dist.html
+++ b/app/views/index_dist.html
@@ -11,6 +11,24 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@urbaninstitute">
+  <meta name="twitter:creator" content="@urbaninstitute">
+  <meta name="twitter:title" content="Mapping America’s Futures">
+  <meta name="twitter:description"
+        content="The Census Bureau projects the United States will grow by nearly 49 million people between 2010 and 2030. Test possible scenarios for how the US population might change in 2020 and 2030.">
+  <meta name="twitter:image" content="NEED IMAGE">
+  <meta property="og:title" content="Mapping America’s Futures" />
+  <meta property="og:description"
+        content="The Census Bureau projects the United States will grow by nearly 49 million people between 2010 and 2030. Test possible scenarios for how the US population might change in 2020 and 2030." />
+  <meta property="og:image" content="NEED IMAGE" />
+  <meta property="og:image:type" content="image/jpeg">
+  <meta property="og:image:width" content="400">
+  <meta property="og:image:height" content="400">
+  <meta property="og:url" content="http://urbn.is/AmericasFutures">
+
+
   <title>Mapping America’s Futures</title>
 
   <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
@@ -696,12 +714,12 @@
               <h6 class="credit-title">PROJECT DIRECTOR</h6>
               Rolf Pendall
               <h6 class="credit-title">RESEARCH</h6>
-              <div class="credit-name">Nan Marie Astone, </div>
-              <div class="credit-name">Steven Martin, </div>
-              <div class="credit-name">H. Elizabeth Peters, </div>
-              <div class="credit-name">Austin Nichols, </div>
-              <div class="credit-name">Kaitlin Franks Hildner, </div>
-              <div class="credit-name">Allison Stolte, </div>
+              <div class="credit-name">Nan Marie Astone,&nbsp;</div>
+              <div class="credit-name">Steven Martin,&nbsp;</div>
+              <div class="credit-name">H. Elizabeth Peters,&nbsp;</div>
+              <div class="credit-name">Austin Nichols,&nbsp;</div>
+              <div class="credit-name">Kaitlin Franks Hildner,&nbsp;</div>
+              <div class="credit-name">Allison Stolte,&nbsp;</div>
               <div class="credit-name">Pam Blumenthal</div>
             </div>
             <div class="col-sm-6">
