images update + legend mouseover change

--- a/app/layout/dropdown.html
+++ b/app/layout/dropdown.html
@@ -80,7 +80,7 @@
         <h1 class="dropdown-section-header">INTERACTIVE FEATURES</h1>
         <hr/>
         <a id="map" class="carousel-link">Tool: Population Projections</a>
-        <!-- <a id="feature" class="carousel-link">Feature: A Tour of America’s Futures</a> -->
+        <a id="feature" class="carousel-link">Feature: A Tour of America’s Futures</a>
         <a target="_blank" href="mailto:americasfutures@urban.org">Questions or Comments?<br/>Let us know.</a>
       </div>
     </div>
