--- a/app/layout/feature.html
+++ b/app/layout/feature.html
@@ -1,7 +1,7 @@
 <div class="item active" id="feature">
-<!--   <div class="view_button right" id="map">
+  <div class="view_button right" id="map">
     EXPLORE THE <BR/> MAP TOOL
-  </div> -->
+  </div>
   <div class="fill">
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2 item-container" id="feature-container">
@@ -17,7 +17,7 @@
             <h4 id="title-lead">
               <p>What will America look like in 2030?</p>
               <p>
-                We can already see that the population is aging and becoming more diverse, but how will those trends play out at the local and regional levels? And what if, in the future, we live longer or have more babies? How would those trends affect the population in different cities and states? 
+                We can already see that the population is aging and becoming more diverse, but how will those trends play out at the local and regional levels? And what if, in the future, we live longer or have more babies? How would those trends affect the population in different cities and states?
               </p>
 
             </h4>
