--- a/app/layout/map.html
+++ b/app/layout/map.html
@@ -1,8 +1,8 @@
 <div class="item" id="map">
 
-<!--   <div class="view_button right" id="feature">
+  <div class="view_button right" id="feature">
     READ THE <BR/> ARTICLE
-  </div> -->
+  </div>
 
   <div class="fill">
     <div class="container">
@@ -266,9 +266,11 @@
             <div class="col-sm-6">
               <h5> WEB TOOL AND FEATURE </h5>
               <h6 class="credit-title">WEB DESIGN</h6>
-              Adrienne Hapanowicz, Tim Meko
+              <div class="credit-name">Adrienne Hapanowicz,&nbsp;</div>
+              <div class="credit-name">Tim Meko</div>
               <h6 class="credit-title">WEB DEVELOPMENT</h6>
-              Ben Southgate, Graham MacDonald
+              <div class="credit-name">Ben Southgate,&nbsp;</div>
+              <div class="credit-name">Graham MacDonald</div>
               <h6 class="credit-title">STORY</h6>
               Serena Lei
               <h6 class="credit-title">EDITING</h6>
@@ -278,9 +280,9 @@
           </div>
           <div class="col-sm-3">
             <h3>Questions? Let us know.</h3>
-            Share your feedback with researchers. 
+            Share your feedback with researchers.
             <a href="mailto:americasfutures@urban.org">AmericasFutures[at]urban.org</a>
-            <a href="https://twitter.com/search?f=realtime&q=%23americasfutures&src=typd">#AmericasFutures</a>    
+            <a href="https://twitter.com/search?f=realtime&q=%23americasfutures&src=typd">#AmericasFutures</a>
           </div>
         </div>
         </div>
