--- a/app/views/index_dist.html
+++ b/app/views/index_dist.html
@@ -11,7 +11,6 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@urbaninstitute">
   <meta name="twitter:creator" content="@urbaninstitute">
@@ -27,7 +26,6 @@
   <meta property="og:image:width" content="400">
   <meta property="og:image:height" content="400">
   <meta property="og:url" content="http://urbn.is/AmericasFutures">
-
 
   <title>Mapping America’s Futures</title>
 
@@ -119,7 +117,7 @@
         <h1 class="dropdown-section-header">INTERACTIVE FEATURES</h1>
         <hr/>
         <a id="map" class="carousel-link">Tool: Population Projections</a>
-        <!-- <a id="feature" class="carousel-link">Feature: A Tour of America’s Futures</a> -->
+        <a id="feature" class="carousel-link">Feature: A Tour of America’s Futures</a>
         <a target="_blank" href="mailto:americasfutures@urban.org">Questions or Comments?<br/>Let us know.</a>
       </div>
     </div>
@@ -127,9 +125,9 @@
 </nav> <div class="container fill">
     <div id="carousel" class="carousel slide">
         <div class="carousel-inner"> <div class="item active" id="feature">
-<!--   <div class="view_button right" id="map">
+  <div class="view_button right" id="map">
     EXPLORE THE <BR/> MAP TOOL
-  </div> -->
+  </div>
   <div class="fill">
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2 item-container" id="feature-container">
@@ -145,7 +143,7 @@
             <h4 id="title-lead">
               <p>What will America look like in 2030?</p>
               <p>
-                We can already see that the population is aging and becoming more diverse, but how will those trends play out at the local and regional levels? And what if, in the future, we live longer or have more babies? How would those trends affect the population in different cities and states? 
+                We can already see that the population is aging and becoming more diverse, but how will those trends play out at the local and regional levels? And what if, in the future, we live longer or have more babies? How would those trends affect the population in different cities and states?
               </p>
 
             </h4>
@@ -459,9 +457,9 @@
 
  <div class="item" id="map">
 
-<!--   <div class="view_button right" id="feature">
+  <div class="view_button right" id="feature">
     READ THE <BR/> ARTICLE
-  </div> -->
+  </div>
 
   <div class="fill">
     <div class="container">
@@ -725,9 +723,11 @@
             <div class="col-sm-6">
               <h5> WEB TOOL AND FEATURE </h5>
               <h6 class="credit-title">WEB DESIGN</h6>
-              Adrienne Hapanowicz, Tim Meko
+              <div class="credit-name">Adrienne Hapanowicz,&nbsp;</div>
+              <div class="credit-name">Tim Meko</div>
               <h6 class="credit-title">WEB DEVELOPMENT</h6>
-              Ben Southgate, Graham MacDonald
+              <div class="credit-name">Ben Southgate,&nbsp;</div>
+              <div class="credit-name">Graham MacDonald</div>
               <h6 class="credit-title">STORY</h6>
               Serena Lei
               <h6 class="credit-title">EDITING</h6>
@@ -737,9 +737,9 @@
           </div>
           <div class="col-sm-3">
             <h3>Questions? Let us know.</h3>
-            Share your feedback with researchers. 
+            Share your feedback with researchers.
             <a href="mailto:americasfutures@urban.org">AmericasFutures[at]urban.org</a>
-            <a href="https://twitter.com/search?f=realtime&q=%23americasfutures&src=typd">#AmericasFutures</a>    
+            <a href="https://twitter.com/search?f=realtime&q=%23americasfutures&src=typd">#AmericasFutures</a>
           </div>
         </div>
         </div>
@@ -759,12 +759,16 @@
   </div> 
     <script src="js/app.min.js"></script>
 
-    <script 
-        src="//tdcdn.blob.core.windows.net/toolbar/assets/prod/td.js" 
-        async 
+
+    <!-- TRACKDUCK -->
+
+<!--
+    <script
+        src="//tdcdn.blob.core.windows.net/toolbar/assets/prod/td.js"
+        async
         data-trackduck-id="54946ea7f14a9117483a0e91">
     </script>
-
+ -->
 </body>
 
 </html>
