stroke width fixes, word change

--- a/app/views/index_dist.html
+++ b/app/views/index_dist.html
@@ -471,7 +471,7 @@
             <div class="col-md-12">
               <h1>Mapping America’s Futures</h1>
               <p class="map-more-text">
-                Test possible scenarios for how the US population might change in 2020 and 2030. The results will change depending on whether you choose low, average, or high rates for future births, deaths, or migration.
+                Test possible scenarios for how the US population might change by 2020 and 2030. The results will change depending on whether you choose low, average, or high rates for future births, deaths, or migration.
               </p>
             </div>
           </div>
