--- a/app/layout/map.html
+++ b/app/layout/map.html
@@ -234,6 +234,9 @@
            <div class="col-sm-3">
             <h3>Data Available for Download</h3>
             <div class="download-link">
+              <a id="download-codebook" href="data/Download/PopProj_Codebook.xlsx">Variable Codebook.</a>
+            </div>
+            <div class="download-link">
               <a id="download-czone" href="">All data for all scenarios for the selected area.</a>
             </div>
             <div class="download-link">
