--- a/app/layout/dropdown.html
+++ b/app/layout/dropdown.html
@@ -44,6 +44,9 @@
       <div class="col-sm-3">
         <h1 class="dropdown-section-header">BLOG POSTS</h1>
         <hr/>
+        <a target="_blank" href="http://blog.metrotrends.org/2015/01/thinking-countrys-demographic-future-projections-policy/">
+          Thinking about our country's demographic future: Projections and policy
+        </a>
         <a target="_blank" href="http://blog.metrotrends.org/2014/06/future-americas-young-population/">
           The future of America’s young population
         </a>
