--- a/app/views/index_build.html
+++ b/app/views/index_build.html
@@ -47,6 +47,7 @@
   <link href="css/nav.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
   <link href="css/select2-bootstrap.css" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 
   <!-- /build -->
 
