--- a/app/views/index_dist.html
+++ b/app/views/index_dist.html
@@ -81,6 +81,9 @@
       <div class="col-sm-3">
         <h1 class="dropdown-section-header">BLOG POSTS</h1>
         <hr/>
+        <a target="_blank" href="http://blog.metrotrends.org/2015/01/projecting-countrys-demographic-future-truth-stranger-fiction/">
+          Projecting our country’s demographic future: The truth may be stranger than fiction
+        </a>
         <a target="_blank" href="http://blog.metrotrends.org/2015/01/thinking-countrys-demographic-future-projections-policy/">
           Thinking about our country's demographic future: Projections and policy
         </a>
