github link + readme update

--- a/app/layout/map.html
+++ b/app/layout/map.html
@@ -285,7 +285,10 @@
             <h3>Questions? Let us know.</h3>
             Share your feedback with researchers.
             <a href="mailto:americasfutures@urban.org">AmericasFutures[at]urban.org</a>
+            <br/>
             <a href="https://twitter.com/search?f=realtime&q=%23americasfutures&src=typd">#AmericasFutures</a>
+            <br/>
+            <a href="https://github.com/UrbanInstitute/mapping-americas-futures">View the source code for this graphic on GitHub</a>
           </div>
         </div>
         </div>
