--- a/app/views/index_build.html
+++ b/app/views/index_build.html
@@ -566,7 +566,7 @@
                 </div>
 
                 <div class="col-sm-5" id="boundary-info">
-                  The map divides the United States into 740 commuting zones&mdash;places connected by local economies.
+                  The map divides the United States into 740 <a href="http://www.ers.usda.gov/data-products/commuting-zones-and-labor-market-areas.aspx">commuting zones</a>&mdash;places connected by local economies.
                 </div>
 
               </div>
@@ -774,7 +774,10 @@
         </div>
         </div>
         <div class="row">
-          <div id="copyright">Copyright &copy; Urban Institute 2015</div>
+          <div id="copyright">
+            <div><a href="http://www.ers.usda.gov/data-products/commuting-zones-and-labor-market-areas.aspx">Commuting Zone geographies were developed by the US Department of Agriculture, Economic Research Service</a></div>
+            Copyright &copy; Urban Institute 2015
+          </div>
         </div>
       </div>
 
